--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: dmvgenie
-description: "A base Flutter project."
-publish_to: "none"
+description: 'A base Flutter project.'
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -25,7 +25,7 @@ dependencies:
   equatable: ^2.0.5
 
   dartx: ^1.2.0
-  result_dart: ^1.1.1
+  result_dart: ^1.0.0
   path: ^1.9.0
   intl: ^0.20.2
 
@@ -43,6 +43,8 @@ dependencies:
   gap: ^3.0.1
   popover: ^0.3.1
   font_awesome_flutter: ^10.8.0
+  image_picker: ^1.0.7
+  permission_handler: ^11.3.0
 
   #navigation
   auto_route: ^8.0.3
@@ -67,6 +69,9 @@ dependencies:
   talker_bloc_logger: ^4.1.3
   talker_dio_logger: ^4.6.11
   rate_my_app: ^2.3.1
+  qr_flutter: ^4.1.0
+  mime: ^1.0.6
+  file_picker: ^8.0.7
 
 dev_dependencies:
   flutter_test:
