--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   qr_flutter: ^4.1.0
   mime: ^1.0.6
   file_picker: ^8.0.7
+  video_player: ^2.10.0
 
 dev_dependencies:
   flutter_test:
